--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ html {
 }
 
 .btn { 
+    display: inline-block;
     padding: 15px 16px;
     font-size: 12px;
     line-height: 1;
@@ -38,6 +39,12 @@ html {
     border-radius: 4px;
     cursor: pointer;
 }
+
+.text-centr {
+    text-align: center;
+}
+
+/* header */
 
 .header {
     height: 110px;
@@ -64,3 +71,181 @@ html {
 .header-btn {
     margin-left: 80px;
 }
+
+/* hero */
+.hero-container {
+    padding-top: 120px;
+    padding-bottom: 130px;
+}
+
+.hero-content {
+    max-width: 50%;
+}
+
+.section-hero-heading {
+    margin-bottom: 20px;
+}
+
+.section-hero-description {
+    margin-bottom: 30px;
+}
+
+.section-hero-btn-description {
+    margin-top: 10px;
+}
+
+/* What we Do */
+
+.section-do {
+    padding-top: 140px;
+    padding-bottom: 100px;
+}
+
+.section-description {
+    margin-top: 20px;
+}
+
+.section-do-list {
+    display: flex;
+    margin-top: 50px;
+}
+
+.section-do-item {
+    flex: 1 1 25%;
+    outline: 1px solid red;
+}
+
+.section-do-item:not(:last-child) {
+    margin-right: 30px;
+}
+
+
+/* Our Happy Clients */
+
+.section-clients {
+    padding-top: 90px;
+    padding-bottom: 90px;
+}
+
+.section-clients-list {
+    display: flex;
+}
+
+.section-clients-item {
+    flex: 1 1 33.33%;
+    outline: 1px solid red;
+}
+
+.section-clients-item:not(:last-child) {
+    margin-right: 30px;
+}
+
+.section-clients-user {
+    display: flex;
+    align-items: center;
+}
+
+.section-clients-avatar {
+    width: 60px;
+    height: 60px;
+    margin-right: 15px;
+    border: 2px solid #3172b9;
+    border-radius: 50%;
+}
+
+/* Contacts */
+
+.section-contacts {
+    padding-top: 85px;
+    padding-bottom: 95px;
+}
+
+.section-contacts-list {
+    margin-top: 43px;
+    display: flex;
+}
+
+.section-contacts-item {
+    flex: 1 1 33.33%;
+    outline: 1px solid red;
+}
+
+.section-contacts-item:not(:last-child) {
+    margin-right: 30px;
+}
+
+.section-contacts-info {
+    max-width: 250px;
+}
+
+.section-contacts-icon {
+    display: block;
+    height: 26px;
+    margin-bottom: 25px;
+    background-repeat: no-repeat;
+    background-position: center left;
+    background-size: auto 100%;
+    background-color: transparent;
+}
+
+.section-contacts-icon-gps {
+    background-image: url('/img/gps.png');
+}
+
+.section-contacts-icon-phone {
+    background-image: url('/img/phone.png');
+}
+.section-contacts-icon-mail {
+    background-image: url('/img/mail.png');
+    background-size: auto 19px;
+}
+
+.section-contacts-heading {
+    margin-bottom: 40px;
+    display: block;
+
+}
+
+/* Footer */
+
+.footer {
+    height: 125px;
+}
+
+.footer-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 100%;
+}
+
+.footer-left {
+    display: flex;
+    align-items: center;
+}
+
+.footer-logo {
+    margin-right: 25px;
+}
+
+.footer-nav-list {
+    display: flex;
+}
+
+.rooter-nav-item:not(:last-child) {
+    margin-right: 35px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
